--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         height: 168px;
         width: 168px;
         position: relative;
-        background-image: url('nasir.jpg');
+        background-image: url('./nasir.jpg');
         cursor: pointer;
     }
 
